47 add prettier to project (#48)
* Add Prettier to project

* Format everything

* Add Prettier to VS Code settings

* Install precommit hook

Also test to see if it works with index.ts

* Revert "Install precommit hook"

This reverts commit eae6c436d5d3137caecde278d2afca09e291fc00.

* Install Husky again following Spanish guide

* Fix syntax

Husky barked at this

* Update VS Code settings

* Add workflow for Prettier
